# ns-dpcpp

./: .cmake-format  .cmake-format.yaml  .env  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dependencies.cmake  Makefile  README.md  conan_run.py  conanfile.py  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  Dockerfile.OneAPI  devcontainer-sourcebuild.json  devcontainer.json
cmake/: CCache.cmake  CPM.cmake  Dependencies.cmake  GCOVerage.cmake  PopulateSYCL.cmake  ProjectOptions.cmake  Sanitaizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
examples/: CMakeLists.txt  simple-sycl-app.cpp
